tests/fixtures/negative/skp1-unsupported-scrypt-p.hex
534b50310101010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000002
000000000000000001
00000000000000000000000000000000
